--- a/src/Modules/CrestApps.OrchardCore.AI.Chat/Views/AIChatSessionChat.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI.Chat/Views/AIChatSessionChat.cshtml
@@ -121,6 +121,7 @@
                 prompt.Content,
                 prompt.Title,
                 prompt.IsGeneratedPrompt,
+                prompt.UserRating,
                 prompt.References,
             });
         }
