--- a/src/Modules/CrestApps.OrchardCore.AI.Chat/Assets/css/ai-chat-widget.css
+++ b/src/Modules/CrestApps.OrchardCore.AI.Chat/Assets/css/ai-chat-widget.css
@@ -319,7 +319,7 @@
 
 .ai-admin-widget .message-buttons-container {
     position: absolute;
-    top: 0.25rem;
+    bottom: 0.25rem;
     right: 0.25rem;
     display: none;
 }
