--- a/src/Modules/CrestApps.OrchardCore.AI.Chat/wwwroot/css/ai-chat.css
+++ b/src/Modules/CrestApps.OrchardCore.AI.Chat/wwwroot/css/ai-chat.css
@@ -33,7 +33,7 @@
 
 .ai-chat-messages .message-buttons-container {
     position: absolute;
-    top: 0.25rem;
+    bottom: 0.25rem;
     right: 0.25rem;
     display: none;
 }
