--- a/src/Modules/CrestApps.OrchardCore.AI.Chat/Views/AIChatAdminWidget.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI.Chat/Views/AIChatAdminWidget.cshtml
@@ -13,7 +13,7 @@
 @inject ShellSettings ShellSettings
 @{
     var profile = (AIProfile)Model.Profile;
-    var sessions = (IEnumerable<AIChatSession>)Model.Sessions;
+    IEnumerable<AIChatSessionEntry> sessions = Model.Sessions;
     var maxSessions = (int)Model.MaxSessions;
     var primaryColor = (string)Model.PrimaryColor;
 
@@ -171,12 +171,12 @@
             metricsEnabled: @(metricsEnabled ? "true" : "false"),
             @if (sessionDocumentsEnabled)
             {
-                @:sessionDocumentsEnabled: true,
-                @:documentBarSelector: '#@documentBarHtmlId',
-                @:uploadDocumentUrl: '@Url.RouteUrl(AIConstants.RouteNames.ChatSessionUploadDocument)',
-                @:removeDocumentUrl: '@Url.RouteUrl(AIConstants.RouteNames.ChatSessionRemoveDocument)',
-                @:allowedExtensions: '@allowedExtensions',
-                @:existingDocuments: [],
+                    @:sessionDocumentsEnabled: true,
+                    @:documentBarSelector: '#@documentBarHtmlId',
+                    @:uploadDocumentUrl: '@Url.RouteUrl(AIConstants.RouteNames.ChatSessionUploadDocument)',
+                    @:removeDocumentUrl: '@Url.RouteUrl(AIConstants.RouteNames.ChatSessionRemoveDocument)',
+                    @:allowedExtensions: '@allowedExtensions',
+                    @:existingDocuments: [],
             }
             messageTemplate: `
                 <div>
